--- a/frontend/res/styles/strategy_market.less
+++ b/frontend/res/styles/strategy_market.less
@@ -3,6 +3,7 @@
     display: inline-block;
     margin: 10px 15px;
     width: 350px;
+    vertical-align: top;
 
     .user, .time {
       font-size: 14px;
