--- a/frontend/res/styles/backtest.css
+++ b/frontend/res/styles/backtest.css
@@ -30,10 +30,10 @@
 #view_backtest .table .form-group {
   margin: 0;
 }
-#view_backtest .table .red {
+#view_backtest .red {
   color: #db5542;
 }
-#view_backtest .table .green {
+#view_backtest .green {
   color: #53b37b;
 }
 #view_backtest .echarts {
