--- a/frontend/res/styles/strategy_market.css
+++ b/frontend/res/styles/strategy_market.css
@@ -2,6 +2,7 @@
   display: inline-block;
   margin: 10px 15px;
   width: 350px;
+  vertical-align: top;
 }
 #view_strategy_market .card .user,
 #view_strategy_market .card .time {
